logs/data-readers.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/data_readers-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/datareaders'...
Compiling './lib/python3.5/site-packages/datareaders/aerospikereader.py'...
***   File "./lib/python3.5/site-packages/datareaders/aerospikereader.py", line 8
    print 'missing host argument, using 127.0.0.1'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datareaders/csvreader.py'...
***   File "./lib/python3.5/site-packages/datareaders/csvreader.py", line 8
    print 'missing database argument, using data.csv'
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datareaders/datareader.py'...
***   File "./lib/python3.5/site-packages/datareaders/datareader.py", line 63
    print 'Data read from '+self.reader_name
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datareaders/mongoreader.py'...
***   File "./lib/python3.5/site-packages/datareaders/mongoreader.py", line 8
    print 'missing host argument, using localhost'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datareaders/mysqlreader.py'...
***   File "./lib/python3.5/site-packages/datareaders/mysqlreader.py", line 8
    print 'missing database argument, using data'
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datareaders/notimplementedreader.py'...
***   File "./lib/python3.5/site-packages/datareaders/notimplementedreader.py", line 4
    print self.reader_name + " failed, did you install its requirements?"
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datareaders/postgresreader.py'...
***   File "./lib/python3.5/site-packages/datareaders/postgresreader.py", line 9
    print 'missing host argument, using localhost'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datareaders/redisreader.py'...
***   File "./lib/python3.5/site-packages/datareaders/redisreader.py", line 8
    print 'missing host argument, using 127.0.0.1'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datareaders/sqlitereader.py'...
***   File "./lib/python3.5/site-packages/datareaders/sqlitereader.py", line 8
    print 'missing database argument, using data.sqlite'
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
